--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -554,7 +554,7 @@ background-color: #45a049;
 <body>
 <div class="banner">
 <!-- Placeholder for kgsflink banner -->
-<img src="https://github.com/vipulyadav557/YOUTUBE-VIDEO-DOWNLOADER.git" alt="writer-vipul banner">
+<img src="https://github.com/vipulyadav557/YOUTUBE-VIDEO-DOWNLOADER/blob/main/INDEX.HTML" alt="writer-vipul banner">
 </div>
 <div class="container">
 <h1>YouTube Downloader</h1>
